bug - site title - fix overlap and navmenu alignment

--- a/css/global.css
+++ b/css/global.css
@@ -244,7 +244,7 @@
        display:flex;
        justify-content: flex-end;
        position:relative;
-       top:30px;	
+       top:1.5rem;;	
    }
    
    .nav-right {
@@ -304,11 +304,13 @@
    }
 
    #siteTitle h1{
-       width:90vw;
+       padding-bottom:1.2rem;
+       padding-left:0;
+       font-size:3.6rem;
    }
 
    #siteTitle h3{
-       width:65vw;
+       padding-left:0;
    }
 
    .mobile ul.mobile-nav >li {
